Fix empty space below page on small windows

--- a/src/components/FriendActivity/friendActivity.scss
+++ b/src/components/FriendActivity/friendActivity.scss
@@ -18,6 +18,8 @@
   z-index: 3;
 
   .friend-activity-container {
+    height: 100%;
+
     padding: 1rem 0 1rem 1rem;
 
     .header {
@@ -54,10 +56,8 @@
     .friends-list {
       // Make friend list scrollable when it overflows.
       overflow-y: auto;
-      min-height: 3.125rem;
-      max-height: calc(100vh - 10.875rem);
 
-      padding-right: 1rem;
+      height: 90%;
 
       // Loading spinner container.
       .loader-container {
@@ -92,7 +92,9 @@
         flex-direction: row;
         align-items: flex-start;
 
-        margin-bottom: 1.875rem;
+        &:not(:last-of-type) {
+          margin-bottom: 1.875rem;
+        }
 
         .user-icon-container {
           display: flex;
@@ -158,7 +160,8 @@
 
         .friend-info {
           width: 100%;
-          margin-left: 0.625rem;
+
+          margin: 0 1rem 0 0.625rem;
 
           .username-and-time {
             display: flex;
@@ -166,10 +169,16 @@
             align-items: center;
 
             .username {
+              max-width: 145px;
+
               font-size: 0.875rem;
               font-weight: 700;
 
               cursor: pointer;
+
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
 
               color: var(--text-gray, #b3b3b3);
 
@@ -186,7 +195,7 @@
           }
 
           .track-and-artist {
-            max-width: 188px;
+            max-width: 178px;
 
             display: flex;
             align-items: center;
@@ -232,7 +241,7 @@
             }
 
             .context-name {
-              max-width: 170px;
+              max-width: 160px;
 
               display: inline-block;
 
@@ -245,6 +254,10 @@
           }
         }
       }
+    }
+
+    ::-webkit-scrollbar {
+      width: 12px;
     }
   }
 }
