--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -9,8 +9,3 @@
   --essential-subdued: #727272;
   --online-badge: #2e77d0;
 }
-
-// Fix bottom play bar cut off on small height screens.
-.Root__now-playing-bar {
-  min-height: calc(691px - 100vh);
-}
